--- a/springBoot_parent/pom.xml
+++ b/springBoot_parent/pom.xml
@@ -1,257 +1,250 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.lulu</groupId>
-  <artifactId>springBoot_parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>父项目</name>
-  <description>maven父项目包管理</description>
-  <modules>
-  	<module>springBoot_advice</module>
-  	<module>springBoot_aspect</module>
-  	<module>springBoot_controller</module>
-  	<module>springBoot_entity</module>
-  	<module>springBoot_feign</module>
-  	<module>springBoot_kafka</module>
-  	<module>springBoot_netty</module>
-  	<module>springBoot_rabbitMQ</module>
-  	<module>springBoot_repository</module>
-  	<module>springBoot_service</module>
-  	<module>springBoot_schedule</module>
-  	<module>springBoot_websocket</module>
-  	<module>springBoot_swagger</module>
-  	<module>springBoot_thread</module>
-  </modules>
-  
-  <properties>
-  	<org.springframework.boot>2.1.6.RELEASE</org.springframework.boot>
-  	<org.springframework.kafka>2.2.4.RELEASE</org.springframework.kafka>
-  	<org.springframework.cloud>2.1.1.RELEASE</org.springframework.cloud>
-  	<mysql>8.0.16</mysql>
-  	<net.sourceforge.nekohtml>1.9.22</net.sourceforge.nekohtml>
-  	<org.aspectj>1.9.4</org.aspectj>
-  	<io.netty>4.1.34.Final</io.netty>
-  	<io.springfox>2.8.0</io.springfox>
-  	<org.projectlombok>1.18.8</org.projectlombok>
-  	<junit>3.8.1</junit>
-  </properties>
-  
-  <parent>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.1.6.RELEASE</version>
-      <relativePath/> <!-- lookup parent from repository -->
-  </parent>
-  
-  <dependencyManagement>
-  	
-	<dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.lulu</groupId>
+	<artifactId>springBoot_parent</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>父项目</name>
+	<description>maven父项目包管理</description>
+	<modules>
+		<module>springBoot_advice</module>
+		<module>springBoot_aspect</module>
+		<module>springBoot_controller</module>
+		<module>springBoot_entity</module>
+		<module>springBoot_feign</module>
+		<module>springBoot_kafka</module>
+		<module>springBoot_netty</module>
+		<module>springBoot_rabbitMQ</module>
+		<module>springBoot_repository</module>
+		<module>springBoot_service</module>
+		<module>springBoot_schedule</module>
+		<module>springBoot_websocket</module>
+		<module>springBoot_swagger</module>
+		<module>springBoot_thread</module>
+	</modules>
 
-		<!-- spring boot starter -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<version>${org.springframework.boot}</version>
-			<exclusions>
-                <exclusion>   <!-- 排除springBoot自带的logBack日志lib -->
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
-		</dependency>
+	<properties>
+		<org.springframework.boot>2.1.6.RELEASE</org.springframework.boot>
+		<org.springframework.kafka>2.2.4.RELEASE</org.springframework.kafka>
+		<org.springframework.cloud>2.1.1.RELEASE</org.springframework.cloud>
+		<mysql>8.0.16</mysql>
+		<net.sourceforge.nekohtml>1.9.22</net.sourceforge.nekohtml>
+		<org.aspectj>1.9.4</org.aspectj>
+		<io.netty>4.1.34.Final</io.netty>
+		<io.springfox>2.8.0</io.springfox>
+		<org.projectlombok>1.18.8</org.projectlombok>
+		<junit>3.8.1</junit>
+	</properties>
 
-		<!-- 引入log4j2 -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-log4j2</artifactId>
-			<version>${org.springframework.boot}</version>
-		</dependency>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.6.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
 
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency> -->
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-undertow</artifactId>
-			<version>${org.springframework.boot}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-			<version>${org.springframework.boot}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>${org.springframework.boot}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
-			<version>${org.springframework.boot}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<version>${org.springframework.boot}</version>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-            <version>${org.springframework.boot}</version>
-        </dependency>
+	<dependencyManagement>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-websocket</artifactId>
-			<version>${org.springframework.boot}</version>
-		</dependency>
+		<dependencies>
 
-		<!--解析html包 -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-			<version>${org.springframework.boot}</version>
-		</dependency>
-
-		<!-- 	spring boot starter END      -->
-
-		<dependency>
-		    <groupId>org.springframework.kafka</groupId>
-		    <artifactId>spring-kafka</artifactId>
-		    <version>${org.springframework.kafka}</version>
-		</dependency>
-
-		<!-- spring cloud START -->
-		<dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-            <version>${org.springframework.cloud}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
-            <version>${org.springframework.cloud}</version>
-        </dependency>
-        
-        <dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-			<version>${org.springframework.cloud}</version>
-		</dependency>
-        
-        <!-- spring cloud END -->
-        
-		<!-- MySQL Driver引入 -->
-		<dependency>
-	        <groupId>mysql</groupId>
-	        <artifactId>mysql-connector-java</artifactId>
-	        <version>${mysql}</version>
-	    </dependency> 
-	    
-		<!-- spring.thymeleaf所需要的依赖包 -->
-		<!-- https://mvnrepository.com/artifact/net.sourceforge.nekohtml/nekohtml -->
-		<dependency>
-		    <groupId>net.sourceforge.nekohtml</groupId>
-		    <artifactId>nekohtml</artifactId>
-		    <version>${net.sourceforge.nekohtml}</version>
-		</dependency>
-
-		
-        <!-- aspectj -->
-		<dependency>
-		    <groupId>org.aspectj</groupId>
-		    <artifactId>aspectjrt</artifactId>
-		    <version>${org.aspectj}</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.aspectj</groupId>
-		    <artifactId>aspectjweaver</artifactId>
-		    <version>${org.aspectj}</version>
-		</dependency>
-
-		<!-- Netty -->
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-buffer</artifactId>
-			<version>${io.netty}</version>
+			<!-- spring boot starter -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${org.springframework.boot}</version>
+				<exclusions>
+					<exclusion>   <!-- 排除springBoot自带的logBack日志lib -->
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-logging</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-tomcat</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-common</artifactId>
-			<version>${io.netty}</version>
+
+			<!-- 引入log4j2 -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-log4j2</artifactId>
+				<version>${org.springframework.boot}</version>
 			</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-transport</artifactId>
-			<version>${io.netty}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-handler</artifactId>
-			<version>${io.netty}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-codec-http</artifactId>
-			<version>${io.netty}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-codec</artifactId>
-			<version>${io.netty}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-transport-native-epoll</artifactId>
-			<version>${io.netty}</version>
-		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger2</artifactId>
-		    <version>${io.springfox}</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
-		<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger-ui</artifactId>
-		    <version>${io.springfox}</version>
-		</dependency>
-				
-		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-		<dependency>
-		    <groupId>org.projectlombok</groupId>
-		    <artifactId>lombok</artifactId>
-		    <version>${org.projectlombok}</version>
-		    <scope>provided</scope>
-		</dependency>		
+			<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-tomcat</artifactId> 
+				<scope>provided</scope> </dependency> -->
 
-		<dependency>
-	      <groupId>junit</groupId>
-	      <artifactId>junit</artifactId>
-	      <version>${junit}</version>
-	      <scope>test</scope>
-	    </dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-undertow</artifactId>
+				<version>${org.springframework.boot}</version>
+			</dependency>
 
-	</dependencies>
-  	
-  </dependencyManagement>
-  
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-aop</artifactId>
+				<version>${org.springframework.boot}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-jpa</artifactId>
+				<version>${org.springframework.boot}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-jdbc</artifactId>
+				<version>${org.springframework.boot}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-test</artifactId>
+				<version>${org.springframework.boot}</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-amqp</artifactId>
+				<version>${org.springframework.boot}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-websocket</artifactId>
+				<version>${org.springframework.boot}</version>
+			</dependency>
+
+			<!--解析html包 -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-thymeleaf</artifactId>
+				<version>${org.springframework.boot}</version>
+			</dependency>
+
+			<!-- spring boot starter END -->
+
+			<dependency>
+				<groupId>org.springframework.kafka</groupId>
+				<artifactId>spring-kafka</artifactId>
+				<version>${org.springframework.kafka}</version>
+			</dependency>
+
+			<!-- spring cloud START -->
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-eureka</artifactId>
+				<version>${org.springframework.cloud}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-feign</artifactId>
+				<version>${org.springframework.cloud}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+				<version>${org.springframework.cloud}</version>
+			</dependency>
+
+			<!-- spring cloud END -->
+
+			<!-- MySQL Driver引入 -->
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>${mysql}</version>
+			</dependency>
+
+			<!-- spring.thymeleaf所需要的依赖包 -->
+			<!-- https://mvnrepository.com/artifact/net.sourceforge.nekohtml/nekohtml -->
+			<dependency>
+				<groupId>net.sourceforge.nekohtml</groupId>
+				<artifactId>nekohtml</artifactId>
+				<version>${net.sourceforge.nekohtml}</version>
+			</dependency>
+
+			<!-- aspectj -->
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjrt</artifactId>
+				<version>${org.aspectj}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>${org.aspectj}</version>
+			</dependency>
+
+			<!-- Netty -->
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-buffer</artifactId>
+				<version>${io.netty}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-common</artifactId>
+				<version>${io.netty}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-transport</artifactId>
+				<version>${io.netty}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-handler</artifactId>
+				<version>${io.netty}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-codec-http</artifactId>
+				<version>${io.netty}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-codec</artifactId>
+				<version>${io.netty}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-transport-native-epoll</artifactId>
+				<version>${io.netty}</version>
+			</dependency>
+
+			<!-- swagger -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>${io.springfox}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${io.springfox}</version>
+			</dependency>
+
+			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${org.projectlombok}</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit}</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
