--- a/springBoot_parent/springBoot_advice/pom.xml
+++ b/springBoot_parent/springBoot_advice/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.lulu</groupId>
     <artifactId>springBoot_parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <!-- <relativePath/> lookup parent from repository -->
   </parent>
   
   <artifactId>springBoot_advice</artifactId>
@@ -23,16 +23,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions>
-                <exclusion>   <!-- 排除springBoot自带的logBack日志lib -->
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
 		</dependency>
 
 		<!-- 引入log4j2 -->
@@ -40,22 +30,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency>
 
 		<!-- 	spring boot starter END      -->
 
@@ -69,7 +43,6 @@
 		<dependency>
 	      <groupId>junit</groupId>
 	      <artifactId>junit</artifactId>
-	      <scope>test</scope>
 	    </dependency>
 
 	</dependencies>
