--- a/springBoot_parent/springBoot_entity/pom.xml
+++ b/springBoot_parent/springBoot_entity/pom.xml
@@ -7,20 +7,43 @@
     <artifactId>springBoot_parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.lulu</groupId>
+  
   <artifactId>springBoot_entity</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <name>springBoot_entity</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  
+	<dependencies>
+
+			<!-- spring boot starter -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-jpa</artifactId>
+			</dependency>
+
+			<!-- spring boot starter END -->
+			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+			</dependency>
+
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+			</dependency>
+			
+			<!-- Module 相互依赖 -->
+			<dependency>
+				<groupId>com.lulu</groupId>
+				<artifactId>springBoot_util</artifactId>
+				<version>${parent.version}</version>
+			</dependency>
+			
+		</dependencies>
+
 </project>
