--- a/springBoot_parent/springBoot_feign/pom.xml
+++ b/springBoot_parent/springBoot_feign/pom.xml
@@ -15,6 +15,13 @@
   
   <dependencies>
   
+  	<!-- Module Dependence -->
+  	<dependency>
+  		<groupId>com.lulu</groupId>
+  		<artifactId>springBoot_dto</artifactId>
+  		<version>${parent.version}</version>
+  	</dependency>
+  
   	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -32,6 +39,12 @@
         </dependency>
         
         <!-- spring cloud END -->
+        
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		</dependency>
   
     <dependency>
       <groupId>junit</groupId>
