--- a/springBoot_parent/pom.xml
+++ b/springBoot_parent/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.lulu</groupId>
 	<artifactId>springBoot_parent</artifactId>
@@ -26,16 +25,18 @@
 		<module>springBoot_web</module>
 		<module>springBoot_util</module>
 		<module>springBoot_dto</module>
-	</modules>
+    	<module>springBoot_config</module>
+  </modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<parent.version>0.0.1-SNAPSHOT</parent.version>
 		
-		<org.springframework.boot>1.5.3.RELEASE</org.springframework.boot>
+		<org.springframework.boot>2.1.2.RELEASE</org.springframework.boot>
 		<org.springframework.kafka>2.2.4.RELEASE</org.springframework.kafka>
-		<org.springframework.cloud>1.4.0.RELEASE</org.springframework.cloud>
+		<org.springframework.cloud>1.4.6.RELEASE</org.springframework.cloud>
+		<spring.cloud.starter.openfeign>2.0.2.RELEASE</spring.cloud.starter.openfeign>
 		<mysql>8.0.16</mysql>
 		<net.sourceforge.nekohtml>1.9.22</net.sourceforge.nekohtml>
 		<org.aspectj>1.9.4</org.aspectj>
@@ -48,8 +49,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.1.2.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<dependencyManagement>
@@ -159,6 +160,13 @@
 				<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 				<version>${org.springframework.cloud}</version>
 			</dependency>
+			
+			<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+			<dependency>
+			    <groupId>org.springframework.cloud</groupId>
+			    <artifactId>spring-cloud-starter-openfeign</artifactId>
+			    <version>${spring.cloud.starter.openfeign}</version>
+			</dependency>
 
 			<!-- spring cloud END -->
 
@@ -252,6 +260,16 @@
 				<version>${junit}</version>
 				<scope>test</scope>
 			</dependency>
-		</dependencies>
+		
+            <dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Finchley.SR2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+            
+        </dependencies>
+		
 	</dependencyManagement>
 </project>
