--- a/springBoot_parent/springBoot_feign/pom.xml
+++ b/springBoot_parent/springBoot_feign/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
         
+        <dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-openfeign</artifactId>
+	    </dependency>
+        
         <!-- spring cloud END -->
         
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
