eureka , 模块添加 暂无功能

--- a/springBoot_parent/pom.xml
+++ b/springBoot_parent/pom.xml
@@ -26,6 +26,7 @@
 		<module>springBoot_util</module>
 		<module>springBoot_dto</module>
     	<module>springBoot_config</module>
+    <module>springBoot_eureka</module>
   </modules>
 
 	<properties>
