--- a/springBoot_parent/pom.xml
+++ b/springBoot_parent/pom.xml
@@ -27,7 +27,8 @@
 		<module>springBoot_dto</module>
     	<module>springBoot_config</module>
     <module>springBoot_eureka</module>
-  </modules>
+    <module>springBoot_eurekaserver</module>
+	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -37,6 +38,7 @@
 		<org.springframework.boot>2.1.2.RELEASE</org.springframework.boot>
 		<org.springframework.kafka>2.2.4.RELEASE</org.springframework.kafka>
 		<org.springframework.cloud>1.4.6.RELEASE</org.springframework.cloud>
+		<org.springframework.cloud.dependence>Finchley.SR2</org.springframework.cloud.dependence>
 		<spring.cloud.starter.openfeign>2.0.2.RELEASE</spring.cloud.starter.openfeign>
 		<mysql>8.0.16</mysql>
 		<net.sourceforge.nekohtml>1.9.22</net.sourceforge.nekohtml>
@@ -149,6 +151,12 @@
 				<artifactId>spring-cloud-starter-eureka</artifactId>
 				<version>${org.springframework.cloud}</version>
 			</dependency>
+
+			<dependency>
+	            <groupId>org.springframework.cloud</groupId>
+	            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+	            <version>${org.springframework.cloud}</version>
+	        </dependency>
 
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -265,7 +273,7 @@
             <dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Finchley.SR2</version>
+				<version>${org.springframework.cloud.dependence}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -282,5 +290,36 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>
+  <repository>
+     <id>central</id>
+     <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+     <name>aliyun</name>
+  </repository>
+  <repository>
+     <id>springsource-repos</id>
+     <name>SpringSource Repository</name>
+     <url>http://repo.spring.io/release/</url>
+  </repository>
+  <repository>
+    <id>central-repos</id>
+    <name>Central Repository</name>
+    <url>http://repo.maven.apache.org/maven2</url>
+  </repository>
+  <repository>
+    <id>central-repos2</id>
+    <name>Central Repository 2</name>
+    <url>http://repo1.maven.org/maven2/</url>
+  </repository>
+  </repositories>
+  
+<pluginRepositories>
+  <pluginRepository>
+    <id>central</id>
+    <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+    <name>aliyun</name>
+  </pluginRepository>
+</pluginRepositories>
 	
 </project>
